# webrtcsays.ai

./: .gitmodules  .gn  BUILD.gn  README.md  build.sh  fix_xcode.sh  webrtc.gni
examples/: BUILD.gn
examples/direct/: Info.plist  bonjour.h  callee.cc  caller.cc  client.cc  client.h  cloudflare.cc  cloudflare.h  direct.cc  direct.h  dirobjc.mm  main.cc  msoup.cc  msoup.h  option.cc  option.h  package.json  parser.h  peer.cc  registrar.js  room.cc  room.h  status.h  utils.cc  utils.h  video.h  wsock.cc  wsock.h
modules/: BUILD.gn
modules/audio_device/: BUILD.gn
modules/audio_device/speech/: speech_audio_device.h  speech_audio_device_factory.cc  speech_audio_device_factory.h  whisper_audio_device.cc  whisper_audio_device.h
sdk/: BUILD.gn
sdk/objc/native/src/: BUILD.gn
test/: BUILD.gn  video_codec_tester_unittest.cc
